[project]
name = "nnw-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "ADHL",email = "hanlim2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "stripe (>=11.5.0,<12.0.0)",
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pydantic-settings (>=2.8.0,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]

[tool.poetry]
packages = [{include = "nnw_backend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
